#81 core tests